cmake_minimum_required(VERSION 3.0)

set(ALGORITHM_FILES version.cpp version.hpp SortUtil.hpp 1_2sum.hpp 2_select_sort.hpp 3_insert_sort.hpp
        4_shell_sort.hpp 5_merge_sort.hpp 6_merge_sort_iter.hpp 7_quick_sort.hpp 8_quick_sort_iter.hpp 9_quick_sort_3way.hpp 11_MaxPQ.hpp 10_heap_sort.hpp 12_find_repeat_element.hpp 13_kandall_distance.hpp 14_select_k.hpp 15_binary_search.hpp 16_binary_search_tree.hpp 17_gnu_hash.hpp 18_string_simple_search.hpp 19_kmp.hpp 20_horspool.hpp GraphUtil.hpp 21_graph_dfs.hpp 22_graph_bfs.hpp 23_graph_cc.hpp 24_graph_cycle.hpp 25_graph_twocolor.hpp DigraphUtil.hpp 26_directed_dfs.hpp 27_diredted_dfs_path.hpp 28_directed_bfs_path.hpp 29_directed_cycle.hpp 30_depth_first_order.hpp 31_topological.hpp 32_kosaraju_cc.hpp EdgeWeightedGraphUtil.hpp 33_LazyPrimMST.hpp EdgeWeightedDigraphUtil.hpp 34_prim_mst.hpp 35_minPQ.hpp 36_dijkstra.hpp 001_select_sort.hpp 002_insert_sort.hpp 003_shell_sort.hpp 004_merge_sort.hpp 005_quick_sort.hpp 006_priority_heap.hpp 007_heap_sort.hpp 008_selectK.hpp 009_bst.hpp ../huawei/huawei.cpp ../huawei/huawei.hpp)
add_library(ALGORITHM ${ALGORITHM_FILES})